# Raycasting-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  circle.c
.github/workflows/: makefile.yml
include/: astar.h  enemy.h  gamestate.h  main.h  maze.h  player.h  raycasting.h  renderer.h
src/: astar.c  enemy.c  gamestate.c  main.c  maze.c  player.c  raycasting.c  renderer.c
